[gd_scene load_steps=69 format=3 uid="uid://bsk12qw6h6qxn"]

[ext_resource type="Script" path="res://main_menu/Menu.gd" id="1_ws5nv"]
[ext_resource type="Theme" uid="uid://b2g8ex2eim5as" path="res://util/game_theme.tres" id="2_gfi3c"]
[ext_resource type="Texture2D" uid="uid://dgt1v8c2j4w1u" path="res://main_menu/blue_witch/B_witch_attack.png" id="3_lqjbc"]
[ext_resource type="Texture2D" uid="uid://dq2jl0mp36nmp" path="res://main_menu/cauldron/cauldron.png" id="4_wtikd"]
[ext_resource type="Texture2D" uid="uid://c735dj1vw731n" path="res://main_menu/blue_witch/B_witch_charge.png" id="4_xbrva"]
[ext_resource type="Texture2D" uid="uid://b1i86i2ko27eu" path="res://main_menu/blue_witch/B_witch_idle.png" id="5_4f5kp"]
[ext_resource type="Texture2D" uid="uid://dsc87yovh6cfw" path="res://main_menu/blue_witch/B_witch_run.png" id="6_70u7r"]
[ext_resource type="Texture2D" uid="uid://ds3tg6yfxlhrs" path="res://main_menu/blue_witch/B_witch_take_damage.png" id="7_2ca4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_otq56"]
bg_color = Color(0.172549, 0.352941, 0.278431, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbbof"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 0, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq8la"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 46, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifxbt"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 92, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt4sh"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 138, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqn4i"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 184, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmnb5"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 230, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nayo"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 276, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_682wi"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 322, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t2rn"]
atlas = ExtResource("3_lqjbc")
region = Rect2(0, 368, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_haaxb"]
atlas = ExtResource("4_xbrva")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_euqln"]
atlas = ExtResource("4_xbrva")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xe7i"]
atlas = ExtResource("4_xbrva")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_idf4f"]
atlas = ExtResource("4_xbrva")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfx1a"]
atlas = ExtResource("4_xbrva")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q57v"]
atlas = ExtResource("5_4f5kp")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah1sd"]
atlas = ExtResource("5_4f5kp")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgky2"]
atlas = ExtResource("5_4f5kp")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4guly"]
atlas = ExtResource("5_4f5kp")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oppc"]
atlas = ExtResource("5_4f5kp")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqlhc"]
atlas = ExtResource("5_4f5kp")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0ck7"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11lwf"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_48hi8"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0eu8"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmow6"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nitcf"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgkpm"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xplr"]
atlas = ExtResource("6_70u7r")
region = Rect2(0, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_umovf"]
atlas = ExtResource("7_2ca4n")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_10quf"]
atlas = ExtResource("7_2ca4n")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sukk"]
atlas = ExtResource("7_2ca4n")
region = Rect2(0, 96, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_kltmq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbbof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq8la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifxbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt4sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqn4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmnb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nayo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_682wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t2rn")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_haaxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euqln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xe7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idf4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfx1a")
}],
"loop": true,
"name": &"charge",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q57v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah1sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgky2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4guly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oppc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqlhc")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0ck7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11lwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48hi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0eu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmow6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nitcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgkpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xplr")
}],
"loop": true,
"name": &"running",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umovf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10quf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sukk")
}],
"loop": true,
"name": &"take_damage",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y0sob"]
atlas = ExtResource("4_wtikd")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynl2"]
atlas = ExtResource("4_wtikd")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rknnx"]
atlas = ExtResource("4_wtikd")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oge8o"]
atlas = ExtResource("4_wtikd")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr0uy"]
atlas = ExtResource("4_wtikd")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3hq2"]
atlas = ExtResource("4_wtikd")
region = Rect2(384, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iganf"]
atlas = ExtResource("4_wtikd")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4viij"]
atlas = ExtResource("4_wtikd")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne0si"]
atlas = ExtResource("4_wtikd")
region = Rect2(384, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnisi"]
atlas = ExtResource("4_wtikd")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybk4t"]
atlas = ExtResource("4_wtikd")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmuaf"]
atlas = ExtResource("4_wtikd")
region = Rect2(384, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtrmq"]
atlas = ExtResource("4_wtikd")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_35jlj"]
atlas = ExtResource("4_wtikd")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqb15"]
atlas = ExtResource("4_wtikd")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxxdt"]
atlas = ExtResource("4_wtikd")
region = Rect2(432, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa2qy"]
atlas = ExtResource("4_wtikd")
region = Rect2(480, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xe34"]
atlas = ExtResource("4_wtikd")
region = Rect2(528, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cywi"]
atlas = ExtResource("4_wtikd")
region = Rect2(432, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mpgt"]
atlas = ExtResource("4_wtikd")
region = Rect2(480, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_401dg"]
atlas = ExtResource("4_wtikd")
region = Rect2(528, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_44lk6"]
atlas = ExtResource("4_wtikd")
region = Rect2(432, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg5ty"]
atlas = ExtResource("4_wtikd")
region = Rect2(480, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4euk"]
atlas = ExtResource("4_wtikd")
region = Rect2(528, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_4upol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0sob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rknnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oge8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr0uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3hq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iganf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4viij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne0si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnisi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybk4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmuaf")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtrmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35jlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqb15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxxdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa2qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xe34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cywi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mpgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_401dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44lk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg5ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4euk")
}],
"loop": true,
"name": &"smoke",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_tc2yj"]
resource_name = "start_pressed"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TinyWitch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(153, 300), Vector2(600, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TinyWitch:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"running", &"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BubblingCaldron:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 0.406127, 1),
"update": 1,
"values": [&"default", &"smoke", &"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_awsbg"]
_data = {
"start_pressed": SubResource("Animation_tc2yj")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ws5nv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_right = 1024.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_otq56")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.9
offset_top = -77.5
offset_right = -168.901
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gfi3c")
theme_override_constants/separation = 5

[node name="Start" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "START"

[node name="Credits" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CREDITS"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT"

[node name="TinyWitch" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(153, 300)
scale = Vector2(5.1875, 5.1875)
sprite_frames = SubResource("SpriteFrames_kltmq")
animation = &"running"
autoplay = "idle"

[node name="BubblingCaldron" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(740, 286)
scale = Vector2(4.4375, 4.4375)
sprite_frames = SubResource("SpriteFrames_4upol")
autoplay = "default"
frame_progress = 0.816007

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
"": SubResource("AnimationLibrary_awsbg")
}

[connection signal="pressed" from="Panel/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
